arreglado el navbar de contact

--- a/style.css
+++ b/style.css
@@ -279,5 +279,5 @@ header {
     font-size: 2.1rem;
     line-height: 2.5rem;
     color: var(--main-black);
-    margin-left: 34px;
+    margin-right: 34px;
 }
