hero desktop listo

--- a/style.css
+++ b/style.css
@@ -281,3 +281,77 @@ header {
     color: var(--main-black);
     margin-right: 34px;
 }
+
+@media (min-width: 1024px) {
+
+    header {
+        margin-top: 40px;
+    }
+    .menu-navbar {
+        display: flex;
+    }
+
+    .menu{
+        justify-content: space-around;
+    }
+
+    .hero {
+        display:flex;
+        flex-direction: row-reverse;
+        padding: 40px 160px 80px 160px;
+    }
+
+    .hero-container {
+        padding-right: 32px;
+        position: relative;
+        z-index: 10;
+    }
+
+    .hero-container h1 {
+    font-family: 'DM Sans', sans-serif;
+    font-size: 6rem;
+    font-weight: 500;
+    line-height: 6.4rem;
+    z-index: 5;
+    position: relative;
+    }
+
+    .hero-container p {
+    margin-top: 24px;
+    color: var(--main-grey);
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 400;
+    font-size: 3.2rem;
+    line-height: 4.8rem;
+    position: relative;
+    z-index: 6;
+    }
+
+    .hero-pill {
+        width:50%;
+        margin-top: 24px;
+        text-align: center;
+        background-color: var(--main-black);
+        padding: 12px 32px 12px 32px;
+        border-radius: 20px;
+    }
+    .hero-pill a {
+        color:var(--main-white);
+        padding: 12px 32px 12px 32px;
+        font-family: 'Inter', sans-serif;
+        font-size: 1.8rem;
+        line-height: 2.4rem;
+        font-weight: 500;
+    }
+
+    .ellipse2 {
+        position: absolute;
+        width: 400px;
+        height: 400px;
+        left: -14.5rem;
+        top: 0rem;
+        background: radial-gradient(50% 50% at 50% 50%, rgba(126, 55, 246, 0.5) 30%, rgba(191, 53, 142, 0) 100%);
+        backdrop-filter: (300px);
+    }
+}
+
