--- a/style.css
+++ b/style.css
@@ -132,13 +132,13 @@ header {
 
 .project1 img {
     width: 100%;
-    padding-top: 40px;
+    padding: 40px 0px 0px 0px;
     max-width: 764px;
 }
 
-.project1  h2 {
+.projects-title {
     font-family: 'DM Sans', sans-serif;
-    font-size: 4rem;
+    font-size: 2.8rem;
     font-weight: 500;
     line-height: 4.8rem;
     padding-top: 16px;
@@ -298,7 +298,7 @@ header {
     .hero {
         display:flex;
         flex-direction: row-reverse;
-        padding: 40px 160px 80px 160px;
+        padding: 40px 160px 0px 160px;
     }
 
     .hero-container {
@@ -352,6 +352,60 @@ header {
         top: 0rem;
         background: radial-gradient(50% 50% at 50% 50%, rgba(126, 55, 246, 0.5) 30%, rgba(191, 53, 142, 0) 100%);
         backdrop-filter: (300px);
+    }
+
+    .proyect-container {
+        width: 100%;
+        padding: 88px 160px
+    }
+
+    .project1 {
+        display:flex;
+        flex-direction: row-reverse;
+    }
+
+    .project1 img {
+        padding: 40px 0px 64px 0px;
+        width: 50%;
+    }
+    .projects-title {
+        font-size: 4rem;
+        padding: 0px 160px 0px 160px
+    }
+    .project1-container, .project2-container, .project3-container {
+        padding: 101px 101px;
+    }
+
+    .project-pill {
+        padding: 24px 16px 0px 16px;
+        justify-content: space-evenly;
+    }
+
+    .project1 h3 {
+        font-size: 2.8rem;
+        font-weight: 700;
+        line-height: 2.4rem;
+    }
+
+    .project1 p {
+        font-size: 1.8rem;
+        line-height: 2.4rem;
+    }
+    
+    .skills-container {
+        padding: 0px 160px;
+    }
+
+    .quote-section{
+        padding: 0px 160px;
+    }
+
+    .contact-section {
+        padding: 64px 160px 64px 160px;
+    }
+
+    .contact-nav ul {
+        justify-content: end;
     }
 }
 
